# BicycleModelV2VS

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
resources/: appicon.rc
src/Controller/: input_manager.cpp  input_manager.h  plot_tire_forces.cpp  plot_tire_forces.h  simulation_inputs.cpp  simulation_inputs.h  tire_params_editor_dialog.cpp  tire_params_editor_dialog.h
src/Model/: eqn_solver.cpp  eqn_solver.h  genetic_algorithm.cpp  genetic_algorithm.h  tire_model.cpp  tire_model.h
src/View/: main_window.cpp  main_window.h  mainwindow.ui
